# multi-Lvl-Coincidence-Analysis

./: .README.md.kate-swp  .gitignore  .readthedocs.yaml  Latex_Template.tex  README.md  README.md~  atomic_formulae.py  auxiliary_functions.py  causal_structure_R_data_to_pdf_graph.py  causal_structure_R_data_to_pdf_graph.py~  causal_structure_truth_table_to_pdf_graph.py  cli.py  environment.yml  gui.py  mLCA.py  mlca-gui.py  mlca.py  obtain_equivalence_formulae.py  output_graph.tex  plot_graph.py  pyproject.toml  r_output.txt  search_formula.py  tree.py  utils.py
R scripts/: test_1.r~  test_1b.r  test_2.r  test_2.r~  test_3.r  test_3.r~  test_4.r  test_5.r  test_6.r
Tex examples/: Latex_Template-beispiel.tex  test.tex
benchmark/: cna_script.r  compare_cna_mLCA.py  generate_random_data.py  mLCA_script.py  random_formulae.txt
benchmark/cna_output/: cna_00001.txt  cna_00002.txt  cna_00003.txt  cna_00004.txt  cna_00006.txt  cna_00007.txt  cna_00009.txt  cna_00010.txt  cna_00011.txt  cna_00012.txt  cna_00013.txt  cna_00014.txt  cna_00016.txt  cna_00017.txt  cna_00018.txt  cna_00019.txt  cna_00020.txt  cna_00021.txt  cna_00023.txt  cna_00025.txt  cna_00026.txt  cna_00027.txt  (+8803 more)
samples/: .~lock.sample_3-csv.csv#  Beispieldatensatz_Data_Science_1.csv  Beispieldatensatz_Data_Science_2.csv  Beispieldatensatz_Data_Science_3.csv  philsci_1.csv  phisci.r  sample_1-cna.r  sample_1-csv.csv  sample_1-qca.r  sample_2-cna.r  sample_2-csv.csv  sample_2-qca.r  sample_3-cna.r  sample_3-csv.csv  sample_3-qca.r  sample_4-cna.r  sample_4-csv.csv  sample_5-csv.csv  test_1.csv  test_11.r  test_12.r  test_14.r  test_2.csv  test_2.r  test_4.csv  test_5.csv  test_6.r  test_7.csv  test_8.csv  test_bsp_Jens.r  test_bsp_Jens3.r
(+7629 files in other folders)
