[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mLCA"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
keywords = ["causal modeling"]
authors = [
  { name = "Johannes Mierau", email = "johannes.mierau@tu-dortmund.de" },
]
maintainers = [
  { name = "Johannes Mierau", email = "johannes.mierau@tu-dortmund.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["pandas>=2.2.3", "jinja2>=3.1.6"]

[project.optional-dependencies]
gui = ["pymupdf<=1.26.3", "pillow<=11.3"]

[dependency-groups]
docs = [
  "graphviz",
  "numpydoc",
  "sphinx",
  "autoapi",
  "sphinx-autoapi"
]

[project.urls]
Documentation = "https://github.com/5vckcq/multi-lvl-Coincidence-Analysis#readme"
Issues = "https://github.com/5vckcq/multi-lvl-Coincidence-Analysis/issues"
Source = "https://github.com/5vckcq/multi-lvl-Coincidence-Analysis"

[tool.hatch.version]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mlca tests}"

[tool.coverage.run]
source_pkgs = ["mlca", "tests"]
branch = true
parallel = true
omit = [
  "docs/*", "benchmark/*", "samples/*",
]

[tool.coverage.paths]
mlca = ["*"]
tests = ["tests", "*/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
